<resources>
    <string name="app_name">Consulta Mais</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_principal_agente">Agent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="patients">Patients</string>
    <string name="logout">Logout</string>
    <string name="sing_in">Sing In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consult_date">Consult Date</string>
    <!--Cadastro de Consulta -->
    <string name="SelectSpeciality">Select speciality:</string>
    <string name="SelectPatience">Select patience:</string>
    <string name="SelectDate">Select date:</string>
    <string name="consultas">Consult</string>
    <string name="cep">Cep</string>
    <string name="Numero">Number</string>
    <string name="medico">Médico</string>
    <string name="Especialidade">Especialidade</string>
    <string name="medicos">Médicos</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="CPF">CPF</string>
    <string name="Adress">Endereço</string>
    <string name="save">Save</string>
    <string name="new_doctor">New Doctor</string>
    <string name="modify_doctor">Modify Doctor</string>
    <string name="horario_de_atendimento">Horário de Atendimento</string>
    <string name="tempo_medio_atendimento">Tempo Médio Atendimento</string>

    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="tempoMedio">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string-array name="horas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>00</item>
    </string-array>

    <string-array name="especialidadesSpinner">
        <item>Clínico Geral</item>
        <item>Cardiologista</item>
        <item>Infectologista</item>
        <item>Geriatra</item>
        <item>Pediatra</item>
        <item>Reumatologista</item>
        <item>Urologista</item>
    </string-array>
    <string-array name="medicosSpinner">
        <item>Selecione um Médico:</item>
        <item>Dr. Elton</item>
        <item>Dr. Felipe Generico</item>
        <item>Dr. Marcia</item>
        <item>Dr. Raissa Guerra de Magalhães</item>
        <item>Dr. Ana Cristina de Souza Bezerra</item>
        <item>Dr. Ivlison Souza</item>
        <item>Dr. Nelson Glauber</item>
    </string-array>
    <string-array name="listaPacientes">
        <item>Elton</item>
        <item>Márcia</item>
        <item>Ramide</item>
        <item>Jurandir</item>
        <item>Hugo</item>
    </string-array>
    <item name="calendarView1" type="id">Calendario</item>
</resources>
