<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".NovoMedicoFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/NomeMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Especialidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Especialidade"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario_de_atendimento"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Inicio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(H) Inicio"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Fim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(H) Fim"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempo_medio_atendimento"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/TempoMedio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minutos"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/save"/>

</LinearLayout>
